# topometryNoSC

./: .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_CHANGES_REPORT.md  CONTRIBUTING.md  Makefile  README.md  citation.cff  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  zensical.toml
.github/workflows/: ci.yml  docs.yml  release.yml
api/: index.html
api/advanced/: index.html
api/internal/: index.html
api/metrics/: index.html
api/plotting/: index.html
api/topograph/: index.html
background/: index.html
changelog/: index.html
citation/: index.html
concepts/: index.html
docs/: about.md  api.md  background.md  changelog.md  citation.md  concepts.md  faq.md  index.md  installation.md  math_details.md  quickstart.md
docs/api/: advanced.md  index.md  internal.md  metrics.md  plotting.md  topograph.md
docs/stylesheets/: extra.css
docs/tutorials/: data-provenance.md  data.py  plotting.md  step-by-step.md
faq/: index.html
installation/: index.html
math_details/: index.html
notebooks/: T1_tutorial.ipynb  _example_utils.py  example.ipynb  example.py  example_explained.ipynb  example_explained.py  example_extended.ipynb  example_extended.py
quickstart/: index.html
search/: search_index.json
src/topo/: __init__.py  _logging.py  _optional.py  analysis.py  plot.py  topograph.py  uom.py  version.py
src/topo/_compat/: __init__.py  scipy_graph.py  sklearn_manifold.py  umap.py
src/topo/_pipeline/: __init__.py  eigen.py  graph.py  layout.py
src/topo/base/: __init__.py  ann.py  dists.py  graph_matrix.py  sparse.py
src/topo/eval/: __init__.py  global_scores.py  local_scores.py  rmetric.py  topo_metrics.py
src/topo/layouts/: __init__.py  diagnostics.py  graph_utils.py  isomap.py  map.py  projector.py
src/topo/spectral/: __init__.py  _spectral.py  eigen.py  map_optimizer.py  umap_layouts.py
src/topo/tpgraph/: __init__.py  cknn.py  fuzzy.py  intrinsic_dim.py  kernels.py
src/topo/utils/: __init__.py  _utils.py  map_utils.py  umap_utils.py
stylesheets/: extra.css
tests/: conftest.py  test_analysis.py  test_ann.py  test_base.py  test_dists.py  test_eigen.py  test_eval.py  test_eval_helpers.py  test_layout_utils.py  test_layouts.py  test_package_api.py  test_packaging.py  test_pipeline_mixins.py  test_plot.py  test_spectral_ops.py  test_topograph.py  test_tpgraph.py  test_umap_compat.py  test_uom.py  test_utils.py
tests/topo/: test_analysis.py  test_packaging.py  test_plot.py  test_standalone_pipeline.py  test_topograph.py  test_uom.py
tests/topo/_compat/: test_scipy_graph_compat.py
tests/topo/_pipeline/: test_pipeline_mixins.py
tests/topo/base/: test_ann.py  test_base.py  test_graph_matrix.py  test_sparse.py
tests/topo/eval/: test_eval.py  test_eval_helpers.py  test_metric_primitives.py
tests/topo/layouts/: test_layout_utils.py  test_layouts.py
tests/topo/spectral/: test_spectral_ops.py
tests/topo/tpgraph/: test_tpgraph.py
tests/topo/utils/: test_utils.py
topo/: __init__.py  analysis.py  plot.py  topograph.py  uom.py  version.py
topo/base/: ann.py
topo/eval/: local_scores.py  rmetric.py  topo_metrics.py
topo/layouts/: __init__.py  projector.py
topo/spectral/: __init__.py  eigen.py
topo/tpgraph/: __init__.py  kernels.py
tutorials/: data.py
tutorials/data-provenance/: index.html
tutorials/plotting/: index.html
tutorials/step-by-step/: index.html
