[project]
name = "topometry"
version = "2.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "scikit-learn>=1.2",
    "numba>=0.57",
    "pandas>=1.5",
    "matplotlib>=3.6",
    "tqdm>=4.64",
    "importlib-metadata>=9.0.0",
]

[project.optional-dependencies]
ann = [
    "hnswlib>=0.8.0",
]
layouts = [
    "pacmap>=0.7",
    "pymde>=0.1",
    "trimap>=1.1",
    "umap-learn>=0.5",
]
notebooks = [
    "ipykernel",
    "ipywidgets",
    "jupyterlab",
]
all = [
    "topometry[ann,layouts,notebooks]",
]


[dependency-groups]
dev = [
    "nbstripout>=0.9.1",
    "pre-commit>=4.5.1",
    "pytest>=8.0",
    "ruff>=0.15.11",
]
nmslib = [
    "nmslib>=2.1.2",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["topo*"]
exclude = ["notebooks", "tests", "data"]
