[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "topometry-nosc"
dynamic = ["version"]
description = "An independently maintained, heavily modified fork of TopOMetry: geometry-first topological dimensionality reduction and manifold learning."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE", "licenses/*.txt"]
authors = [
    { name = "J. Madsen", email = "jsmadsen@sund.ku.dk" },
]
maintainers = [
    { name = "J. Madsen", email = "jsmadsen@sund.ku.dk" },
]
keywords = [
    "dimensionality-reduction",
    "manifold-learning",
    "topology",
    "spectral-embedding",
    "diffusion-maps",
    "single-cell",
    "machine-learning",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Typing :: Typed",
]
dependencies = [
    "numpy>=1.23",
    "scipy>=1.9",
    "scikit-learn>=1.2",
    "numba>=0.57",
    "joblib>=1.3",
    "umap-learn>=0.5.8",
]

[project.optional-dependencies]
plot = ["matplotlib>=3.6"]
pandas = ["pandas>=1.5"]
ann = ["hnswlib>=0.8.0"]
amg = ["pyamg>=5.3.0"]
layouts = [
    "pacmap>=0.7",
    "pymde>=0.1",
    "trimap>=1.1",
]
notebooks = [
    "ipykernel",
    "ipywidgets",
    "jupyterlab",
]
all = ["topometry-nosc[plot,pandas,ann,amg,layouts]"]

[project.urls]
Homepage = "https://github.com/HauserGroup/topometryNoSC"
Repository = "https://github.com/HauserGroup/topometryNoSC"
Issues = "https://github.com/HauserGroup/topometryNoSC/issues"
Changelog = "https://github.com/HauserGroup/topometryNoSC/blob/master/CHANGELOG.md"
"Original project" = "https://github.com/davisidarta/topometry"

[dependency-groups]
dev = [
    "jupytext>=1.19.3",
    "mypy>=1.13",
    "nbstripout>=0.9.1",
    "pre-commit>=4.5.1",
    "pyright>=1.1.410",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.15.11",
]
nmslib = ["nmslib>=2.1.2"]
docs = [
    "mkdocs-material>=9",
    "mkdocstrings[python]>=0.25",
]

[tool.hatch.version]
path = "src/topo/version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/topo"]

[tool.hatch.build.targets.sdist]
include = [
    "src/topo",
    "tests",
    "licenses",
    "LICENSE",
    "README.md",
    "CHANGELOG.md",
    "CITATION.cff",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "NPY", "D"]
# This is a scientific codebase with numba-jitted hot loops; several lint rules
# are either opinionated or actively incompatible with numba typing. The set
# below documents pragmatic exclusions; the remaining rules still catch real
# bugs (undefined names, unused imports, shadowing, etc.).
ignore = [
    "E501",   # line length is handled by the formatter
    "E402",   # optional-dependency guards import after a require() call
    "E741",   # ambiguous names (l, I) are common in linear-algebra code
    "B905",   # zip strict= — too noisy for the py310 baseline
    "B904",   # raise ... from ... — incremental cleanup
    "B006",   # mutable default args are required by some numba signatures
    "B008",   # function-call defaults (np.array/np.eye) needed by numba
    "B007",   # unused loop control variables are common in numeric loops
    "B028",   # explicit stacklevel on warnings — low value
    "UP031",  # percent-formatting is acceptable here
    "SIM108", # ternary-instead-of-if — opinionated
    "SIM102", # collapsible-if — opinionated
    "SIM118", # `in dict.keys()` — left for a focused pass
    "NPY002", # legacy np.random — migration tracked separately
]

[tool.ruff.lint.isort]
known-first-party = ["topo"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B", "D"]
# numba-jitted internals: agreed bar is a concise one-line summary, not full
# NumPy sections. Keep presence rules (D1xx); drop the section-content rules.
"src/topo/base/sparse.py" = ["D205", "D400", "D401", "D415"]
"src/topo/base/dists.py" = ["D205", "D400", "D401", "D415"]
"src/topo/spectral/umap_layouts.py" = ["D205", "D400", "D401", "D415"]
"src/topo/utils/umap_utils.py" = ["D205", "D400", "D401", "D415"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_redundant_casts = true
warn_unused_ignores = false
no_implicit_optional = true
files = ["src/topo"]

[tool.pyright]
extraPaths = ["src", "notebooks"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "optional_deps: tests that exercise optional-dependency guard rails",
]
filterwarnings = [
    "ignore::scipy.sparse.SparseEfficiencyWarning",
]

[tool.coverage.run]
source = ["topo"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
